Add docker-compose to pre circle tasks

--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,8 @@ dependencies:
 
 
 test:
+    pre:
+        - docker-compose build
     override:
         - docker-compose run backend bash -c "/tmp/wait-for-it.sh -h db -p 5432 && ./manage.py test"
 
