--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,7 @@ dependencies:
         - pip install ansible
         - pip install invoke
         - pip install docker-compose
+        - docker info
 
 
 test:
@@ -18,4 +19,14 @@ test:
         - docker-compose build
     override:
         - docker-compose run backend bash -c "/tmp/wait-for-it.sh -h db -p 5432 && ./manage.py test"
+
+
+deployment:
+    hub:
+        branch: master
+        commands:
+            - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+            - docker push banjocat/calorie_find
+            - echo "---" > ./ansible/vars/docker_env.yml
+            - ansible-playbook -i ./ansible/staging_inventory -u root --tags "deploy" --extra-vars="docker_user=$DOCKER_USER docker_password=$DOCKER_PASS docker_email=$DOCKER_EMAIL" ./ansible/playbook.yml
 
