--- a/circle.yml
+++ b/circle.yml
@@ -24,5 +24,5 @@ deployment:
             - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
             - docker push banjocat/calorie_find
             - echo "---" > ./ansible/vars/docker_env.yml
-            - ansible-playbook -i ./ansible/staging_inventory -u root --tags "deploy" --extra-vars="docker_user=$DOCKER_USER docker_password=$DOCKER_PASS docker_email=$DOCKER_EMAIL" ./ansible/playbook.yml
+            - ansible-playbook -i ./ansible/staging_inventory.ini -u root --tags "deploy" --extra-vars="docker_user=$DOCKER_USER docker_password=$DOCKER_PASS docker_email=$DOCKER_EMAIL" ./ansible/playbook.yml
 
