--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     backend:
         build: ./backend/.
         image: banjocat/calorie_find:latest
+        restart: always
         depends_on:
             - db
         command: bash -c "/tmp/wait-for-it.sh -h db -p 5432 && ./manage.py runserver 0.0.0.0:8000"
