Remove compose role and cleanup

--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -26,5 +26,8 @@
 - name: Install docker-py
   pip: name=docker-py
 
+- name: Install compose
+  pip: name=docker-compose
+
 - name: Start docker
   service: name=docker state=started
