--- a/ansible/roles/calorie_find/templates/docker-compose.yml
+++ b/ansible/roles/calorie_find/templates/docker-compose.yml
@@ -6,14 +6,18 @@ services:
         depends_on:
             - db
         command: bash -c "/tmp/wait-for-it.sh -h db -p 5432 && python ./manage.py runserver 0.0.0.0:8000"
-        ports: 
-            - "{{port}}:8000"
     db:
         image: postgres:9.5
         container_name: {{db_name}}
         environment:
             - POSTGRES_USER={{postgres_user}}
             - POSTGRES_PASSWORD={{postgres_pass}}
+    frontend:
+        image: {{image_frontend}}
+        depends_on:
+            - backend
+        ports:
+            - "{{port}}:80"
     fixture:
         image: {{image}}
         container_name: {{db_name}}_fixture
