--- a/ansible/roles/calorie_find/tasks/main.yml
+++ b/ansible/roles/calorie_find/tasks/main.yml
@@ -32,6 +32,14 @@
   tags:
       - deploy
 
+- name: Get latest image - {{image_db}}
+  docker_image:
+      name: "{{image_db}}"
+      force: yes
+  tags:
+      - deploy
+
+
 
 - name: Run staging compose
   docker_service:
