--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,7 @@ dependencies:
     pre:
         - sudo pip install ansible
         - sudo pip install docker-compose
+        - sudo pip install fabric
 
 
 test:
@@ -26,5 +27,5 @@ deployment:
             - docker push banjocat/calorie_find
             - docker push banjocat/calorie_find_frontend
             - docker push banjocat/calorie_find_db
-            - ansible-playbook -i ./ansible/staging_inventory.ini -u root --tags "deploy" --extra-vars="docker_user=$DOCKER_USER docker_password=$DOCKER_PASS docker_email=$DOCKER_EMAIL" ./ansible/playbook.yml
+            - fabric deploy
 
