--- a/circle.yml
+++ b/circle.yml
@@ -7,9 +7,10 @@ machine:
 
 dependencies:
     pre:
+        - sudo pip install --upgrade pip
         - sudo pip install ansible
         - sudo pip install docker-compose
-        - sudo pip install fabric
+        - sudo apt-get install fabric
 
 
 test:
