--- a/production-compose.yml
+++ b/production-compose.yml
@@ -6,6 +6,7 @@ services:
         container_name: food_backend
         depends_on:
             - db
+            - fixture
         command: bash -c "/tmp/wait-for-it.sh -h db -p 5432 && python ./manage.py runserver 0.0.0.0:8000"
     db:
         image: banjocat/calorie_find_db:latest
