--- a/production-compose.yml
+++ b/production-compose.yml
@@ -8,6 +8,8 @@ services:
             - db
             - fixture
         command: bash -c "/tmp/wait-for-it.sh -h db -p 5432 && python ./manage.py runserver 0.0.0.0:8000"
+        environment:
+            - debug=yes
         ports:
             - "8020:8000"
     db:
