--- a/codefresh.yml
+++ b/codefresh.yml
@@ -2,12 +2,12 @@ version: '1.0'
 steps:
     build-backend:
         type: build
-        working-directory: ./backend
+        working-directory: ${{clone-step-name}}/backend
         image-name: banjocat/calorie_find
         tag: latest
     build-db:
         type: build
-        working-directory: ./db/.
+        working-directory: ${{clone-step-name}}/backend
         image-name: banjocat/calorie_find_db
         tag: latest
 
