--- a/codefresh.yml
+++ b/codefresh.yml
@@ -2,12 +2,14 @@ version: '1.0'
 steps:
     build-backend:
         type: build
-        working-directory: backend
+        working-directory: ./backend/.
+        dockerfile: ./backend/Dockerfile
         image-name: banjocat/calorie_find
         tag: latest
     build-db:
         type: build
         working-directory: db
+        dockerfile: ./db/Dockerfile
         image-name: banjocat/calorie_find_db
         tag: latest
 
